<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">Basic Player/Recorder</string>
    <string name="action_settings">Settings</string>
    <string name="settings_record">Settings:</string>
    <string name="record_fs">Sampling Frequency (Hz)</string>
    <string name="start_recording_button">Start Recording</string>
    <string name="stop_recording_button">Stop Recording</string>
    <string name="default_sampling_rate">48000</string>
    <string-array name="sampling_rates">
        <item >48000</item><item >44100</item>
        <item >22050</item>
        <item >16000</item>
        <item >11025</item>
        <item >8000</item>
        
    </string-array>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="audio_input">Audio Input:</string>
    <string name="default_audio_input">Front Microphone</string>
    <string-array name="audio_inputs">
        
        <item >MIC</item>
        <item>CAMCORDER</item><item >VOICE_UPLINK</item>
        <item >VOICE_DOWNLINK</item>
        <item >VOICE_CALL</item>
        
        <item >VOICE_RECOGNITION</item>
        <item >VOICE_COMMUNICATION</item><item>DEFAULT</item>
    </string-array>
    <string name="channel_config">Channel configuration:</string>
    <string-array name="channel_configs">
        <item>MONO</item><item>STEREO</item><item >DEFAULT</item>
        
        
    </string-array>
    <string name="default_channel_config">MONO</string>

</resources>
